Fixing error icon alignment : Ritesh

--- a/media/css/scss/form.scss
+++ b/media/css/scss/form.scss
@@ -128,7 +128,7 @@ span .error_arrow,div.error_arrow,#questionnaire-code-error, label.error_arrow{
             }
         }
 .message-box{
-        background:#fdd3d2 url(/media/images/error_alert.png) no-repeat 10px 4px;
+        background:#fdd3d2 url(/media/images/error_alert.png) no-repeat 10px 10px;
         color:#000000 !important;
         margin:10px;
         padding:7px 10px 7px 40px;
